Account users tab - in progress

--- a/account-details-tab.html
+++ b/account-details-tab.html
@@ -1108,13 +1108,25 @@
                                                     <div class="col-lg-5">
                                                         <h6 class="">Roles</h6>
                                                         <form class="roles-check">
-                                                            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-                                                            <label for="vehicle1"> I have a bike</label><br>
-                                                            <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-                                                            <label for="vehicle2"> I have a car</label><br>
-                                                            <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-                                                            <label for="vehicle3"> I have a boat</label>
+                                                            <input type="checkbox" id="admin" name="admin" value="admin">
+                                                            <label for="admin"> Admin</label><br>
+                                                            <input type="checkbox" id="admin" name="admin" value="admin">
+                                                            <label for="admin"> Admin</label><br>
+                                                            <input type="checkbox" id="admin" name="admin" value="admin">
+                                                            <label for="admin"> Admin</label><br>
+                                                            <input type="checkbox" id="admin" name="admin" value="admin">
+                                                            <label for="admin"> Admin</label><br>
+                                                            <input type="checkbox" id="admin" name="admin" value="admin">
+                                                            <label for="admin"> Admin</label><br>
+                                                            <input type="checkbox" id="admin" name="admin" value="admin">
+                                                            <label for="admin"> Admin</label><br>
                                                           </form>
+                                                    </div>
+                                                    <div class="col-lg-4">
+                                                        <div class="p-3 mt-4 agreement-buttons user-btns d-flex align-items-center justify-content-center">
+                                                            <a href="#" class="save-continue-btn"><i class="fa-regular fa-floppy-disk" aria-hidden="true"></i>Add Note</a>
+                                                            <a href="#" class="save-continue-btn"><i class="fa-regular fa-floppy-disk" aria-hidden="true"></i>Add Note</a>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
