--- a/add-billing-account.html
+++ b/add-billing-account.html
@@ -265,7 +265,7 @@
                                         </div>
                                         <h3 class="text-capitalize text-secondary fw-bold">Enter new accounts - Personal information</h3>
                                         <h6 class="text-uppercase">account information</h6>
-                                        <div class="account-information mt-4 gap-10 d-lg-flex align-items-end">
+                                        <div class="account-information mt-4 gap-3 d-lg-flex align-items-end">
                                             <div class="account-information-col">
                                                 <label class="form-label required">Client</label>
                                                 <input type="text" placeholder="Search" class="account-info-input" required />
@@ -299,7 +299,7 @@
                                         <div class="row mt-4">
                                             <div class="col-lg-6 account-information">
                                                 <h6 class="text-uppercase">basic information</h6>
-                                                <div class="account-information-col basic-information-col w-50">
+                                                <div class="account-information-col first-name basic-information-col w-50">
                                                     <label class="form-label required">Full Name</label>
                                                     <input type="text" class="account-info-input" required />
                                                 </div>
@@ -335,7 +335,7 @@
                                             </div>
                                             <div class="col-lg-6 account-information personal-information">
                                                 <h6 class="text-uppercase">personal information</h6>
-                                                <div class="account-information-col basic-information-col w-50">
+                                                <div class="account-information-col p-10 basic-information-col w-50">
                                                     <label class="form-label">Second Name</label>
                                                     <input type="text" class="account-info-input" />
                                                 </div>
@@ -343,7 +343,7 @@
                                                     <label class="form-label">SSN</label>
                                                     <input type="text" class="account-info-input" />
                                                 </div>
-                                                <div class="account-information-col w-50">
+                                                <div class="account-information-col p-10 w-50">
                                                     <label class="form-label">Email Address</label>
                                                     <input type="email" class="account-info-input" />
                                                 </div>
@@ -351,7 +351,7 @@
                                                     <label class="form-label">Birthdate</label>
                                                     <input type="text" class="account-info-input" />
                                                 </div>
-                                                <div class="account-information-col w-50">
+                                                <div class="account-information-col p-10 w-50">
                                                     <label class="form-label">Home Phone</label>
                                                     <input type="tel" class="account-info-input" />
                                                 </div>
@@ -359,7 +359,7 @@
                                                     <label class="form-label">Cell Phone</label>
                                                     <input type="tel" class="account-info-input" />
                                                 </div>
-                                                <div class="account-information-col w-50">
+                                                <div class="account-information-col p-10 w-50">
                                                     <label class="form-label">Work Phone</label>
                                                     <input type="tel" class="account-info-input" />
                                                 </div>
@@ -369,7 +369,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="credit-card-information mt-4 gap-10 d-lg-flex align-items-end">
+                                        <div class="credit-card-information mt-4 gap-3 d-lg-flex align-items-end">
                                             <div class="account-information-col">
                                                 <h6 class="text-uppercase">credit card information</h6>
                                                 <label class="form-label required">credit card type</label>
@@ -407,7 +407,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="cc-account-numbers mt-4 gap-10 d-lg-flex align-items-end">
+                                        <div class="cc-account-numbers mt-4 gap-3 d-lg-flex align-items-end">
                                             <div class="account-information-col">
                                                 <label class="form-label required">CC Account Number</label>
                                                 <input type="text" class="account-info-input" required />
@@ -434,7 +434,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="cc-expiration mt-4 gap-10 d-lg-flex align-items-end">
+                                        <div class="cc-expiration mt-4 gap-3 d-lg-flex align-items-end">
                                             <div class="account-information-col">
                                                 <label class="form-label required">CC Expiration</label>
                                                 <input type="text" placeholder="MMYY" class="account-info-input" required />
@@ -457,7 +457,7 @@
                                         <div class="row mt-4">
                                             <div class="col-lg-5 account-information">
                                                 <h6 class="text-uppercase">misc information</h6>
-                                                <div class="account-information-col w-50">
+                                                <div class="account-information-col p-10 w-50">
                                                     <label class="form-label required">personal trainer</label>
                                                     <input type="text" class="account-info-input" required />
                                                 </div>
@@ -465,7 +465,7 @@
                                                     <label class="form-label required">corp id</label>
                                                     <input type="text" class="account-info-input" required />
                                                 </div>
-                                                <div class="account-information-col w-50">
+                                                <div class="account-information-col p-10 w-50">
                                                     <label class="form-label required">Locker</label>
                                                     <input type="text" class="account-info-input" required />
                                                 </div>
@@ -481,7 +481,7 @@
                                             </div>
                                             <div class="col-lg-7 account-information personal-information">
                                                 <h6 class="text-uppercase">submembers</h6>
-                                                <div class="members-information-col gap-10 d-flex align-items-end">
+                                                <div class="members-information-col gap-3 d-flex align-items-end">
                                                     <div class="un-col">
                                                         <label class="form-label">User Name</label>
                                                         <input type="text" placeholder="John" />
@@ -495,7 +495,7 @@
                                         <div class="row mt-4">
                                             <div class="col-lg-6 account-information">
                                                 <h6 class="text-uppercase">account information</h6>
-                                                <div class="account-info-date d-flex">
+                                                <div class="account-info-date gap-3 d-flex">
                                                     <div class="account-information-col">
                                                         <label class="form-label required">Date</label>
                                                         <input type="date" id="contracted-date" name="contracted date" required />
@@ -509,7 +509,7 @@
                                                         <input type="text" class="account-info-input" required />
                                                     </div>
                                                 </div>
-                                                <div class="owners-name d-flex align-items-end">
+                                                <div class="owners-name d-flex gap-3 align-items-end">
                                                     <div class="account-information-col">
                                                         <label class="form-label required">Owner's Name</label>
                                                         <input type="text" placeholder="First Name" class="account-info-input" required />
@@ -522,7 +522,7 @@
                                                         <input type="email" class="account-info-input" required />
                                                     </div>
                                                 </div>
-                                                <div class="d-flex">
+                                                <div class="d-flex gap-3">
                                                     <div class="account-information-col">
                                                         <label class="form-label required">Company EIN or SSN</label>
                                                         <input type="text" class="account-info-input" required />
@@ -538,7 +538,7 @@
                                             </div>
                                             <div class="col-lg-6 account-information personal-information">
                                                 <h6 class="text-uppercase">submembers</h6>
-                                                <div class="members-information-col gap-10 d-flex align-items-end">
+                                                <div class="members-information-col gap-3 d-flex align-items-end">
                                                     <div class="un-col">
                                                         <label class="form-label">User Name</label>
                                                         <input type="text" placeholder="John" />
@@ -563,7 +563,7 @@
                                                     <label class="form-label required">Address 2</label>
                                                     <input type="text" class="account-info-input" required />
                                                 </div>
-                                                <div class="d-flex">
+                                                <div class="d-flex gap-3">
                                                     <div class="account-information-col">
                                                         <label class="form-label required">City</label>
                                                         <input type="text" class="account-info-input" required="" />
@@ -582,7 +582,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 account-information personal-information">
-                                                <div class="account-information-col w-50">
+                                                <div class="account-information-col p-10 w-50">
                                                     <label class="form-label">Home Phone</label>
                                                     <input type="tel" class="account-info-input" />
                                                 </div>
@@ -590,7 +590,7 @@
                                                     <label class="form-label">Cell Phone</label>
                                                     <input type="tel" class="account-info-input" />
                                                 </div>
-                                                <div class="account-information-col w-50">
+                                                <div class="account-information-col p-10 w-50">
                                                     <label class="form-label">Fax Number</label>
                                                     <input type="tel" class="account-info-input" />
                                                 </div>
@@ -640,7 +640,7 @@
                                             </div>
                                             <div class="col-lg-6 account-information personal-information">
                                                 <div class="years-info d-flex">
-                                                    <div class="account-information-col">
+                                                    <div class="account-information-col p-10">
                                                         <label class="form-label">Year established</label>
                                                         <input type="text" class="account-info-input" />
                                                     </div>
@@ -762,7 +762,7 @@
                                                     <label class="form-label required">Bank Address</label>
                                                     <input type="text" class="account-info-input" required="" />
                                                 </div>
-                                                <div class="d-flex">
+                                                <div class="d-flex gap-3">
                                                     <div class="account-information-col">
                                                         <label class="form-label required">City</label>
                                                         <input type="text" class="account-info-input" required="" />
