Account fees tab - in progress

--- a/account-details-tab.html
+++ b/account-details-tab.html
@@ -1216,16 +1216,84 @@
                                                 </div>
                                             </div>
                                             <div class="tab-pane fade" id="fees-tab-pane" role="tabpanel" aria-labelledby="fees-tab" tabindex="0">
-                                                <div class="row mt-4 mx-1">
-                                                    <div class="border-bottom-grey d-flex align-items-center justify-content-lg-between px-0">
-                                                        <div class="acnt-heading">
-                                                            <h3 class="text-capitalize text-secondary fw-bold mb-0">Accounts details</h3>
+                                                <div class="row mt-4 border-bottom-grey mx-1 align-items-center justify-content-lg-between">
+                                                    <div class="col-lg-6 px-0">
+                                                        <div class="d-flex align-items-center gap-5 px-0">
+                                                            <div class="acnt-heading">
+                                                                <h3 class="text-capitalize text-secondary fw-bold mb-0">Accounts fees</h3>
+                                                            </div>
+                                                            <div class="accounts-details-status">
+                                                                <h6 class="status mb-0"><strong>Marchant Account</strong></h6>
+                                                                <div class="form-check form-switch">
+                                                                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked="">
+                                                                    <label class="form-check-label" for="flexSwitchCheckChecked">Yes</label>
+                                                                </div>
+                                                            </div>
                                                         </div>
-                                                        <div class="accounts-details-status d-flex align-items-center justify-content-end">
-                                                            <h6 class="status mb-0"><strong>Status:</strong></h6>
-                                                            <div class="form-check form-switch">
-                                                                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked="">
-                                                                <label class="form-check-label" for="flexSwitchCheckChecked">Yes</label>
+                                                    </div>
+                                                    <div class="col-lg-6 d-flex align-items-center justify-content-end px-0">
+                                                        <button type="submit" class="btn btn-primary site-btn">Update Account</button>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                        <h6 class="text-uppercase mt-3">Maintenance</h6>
+                                                        <div class="maintenance-fee-row gap-3 d-flex align-items-center justify-content-between my-5">
+                                                            <div class="maintenance-fee-col">
+                                                                <label class="form-label">Date</label>
+                                                                <input type="date" id="contracted-date" name="contracted date">
+                                                            </div>
+                                                            <div class="maintenance-fee-col">
+                                                                <label class="form-label">Date</label>
+                                                                <input type="date" id="contracted-date" name="contracted date">
+                                                            </div>
+                                                            <div class="maintenance-fee-col">
+                                                                <label class="form-label">Date</label>
+                                                                <input type="date" id="contracted-date" name="contracted date">
+                                                            </div>
+                                                            <div class="maintenance-fee-col">
+                                                                <div class="accounts-details-status">
+                                                                    <h6 class="status mb-0"><strong>Marchant Account</strong></h6>
+                                                                    <div class="form-check form-switch">
+                                                                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked="">
+                                                                        <label class="form-check-label" for="flexSwitchCheckChecked">Yes</label>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="maintenance-fee-col">
+                                                                <label class="form-label">Maintenance Fee</label>
+                                                                <div class="pay-sign">
+                                                                    <input type="text" placeholder="20" class="account-info-input">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="maintenance-fee-row gap-3 d-flex align-items-center justify-content-between my-5">
+                                                            <div class="maintenance-fee-col">
+                                                                <label class="form-label">Date</label>
+                                                                <input type="date" id="contracted-date" name="contracted date">
+                                                            </div>
+                                                            <div class="maintenance-fee-col">
+                                                                <label class="form-label">Date</label>
+                                                                <input type="date" id="contracted-date" name="contracted date">
+                                                            </div>
+                                                            <div class="maintenance-fee-col">
+                                                                <label class="form-label">Date</label>
+                                                                <input type="date" id="contracted-date" name="contracted date">
+                                                            </div>
+                                                            <div class="maintenance-fee-col">
+                                                                <div class="accounts-details-status">
+                                                                    <h6 class="status mb-0"><strong>Marchant Account</strong></h6>
+                                                                    <div class="form-check form-switch">
+                                                                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked="">
+                                                                        <label class="form-check-label" for="flexSwitchCheckChecked">Yes</label>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="maintenance-fee-col">
+                                                                <label class="form-label">Maintenance Fee</label>
+                                                                <div class="pay-sign">
+                                                                    <input type="text" placeholder="20" class="account-info-input">
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
